# sidlib

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt
include/sidlib/: CMakeLists.txt
include/sidlib/datastructures/lists/: CMakeLists.txt
include/sidlib/datastructures/map/: CMakeLists.txt
include/sidlib/datastructures/queue/: CMakeLists.txt
include/sidlib/datastructures/stack/: CMakeLists.txt
include/sidlib/datastructures/string/: CMakeLists.txt
include/sidlib/utility/: CMakeLists.txt
include/sidlib/utility/format/: CMakeLists.txt  format.hpp
include/sidlib/utility/intrinsics/: CMakeLists.txt  intrinsics.hpp  simd.hpp
src/: CMakeLists.txt
src/datastructures/: CMakeLists.txt
src/datastructures/array/: CMakeLists.txt
src/datastructures/arrays/: CMakeLists.txt
src/datastructures/arrays/dynamicArray/: CMakeLists.txt
src/datastructures/arrays/dynamic_array/: CMakeLists.txt  dArray.hpp
src/datastructures/arrays/staticArray/: CMakeLists.txt  array.hpp
src/datastructures/arrays/static_array/: CMakeLists.txt  array.hpp
src/datastructures/lists/doublyLinkedList/: CMakeLists.txt
src/datastructures/lists/linkedList/: CMakeLists.txt
src/datastructures/map/: CMakeLists.txt
src/datastructures/queue/: CMakeLists.txt
src/datastructures/stack/: CMakeLists.txt
src/datastructures/string/: CMakeLists.txt
src/datastructures/vector/: CMakeLists.txt
src/tests/: CMakeLists.txt  sidlib.cpp
tests/: CMakeLists.txt  array_test.cpp  sidlib.cpp  test_array.cpp  test_darray.cpp  test_intrinsics.cpp  test_simd.cpp
(+6 files in other folders)
